@@ -691,6 +691,7 @@ CREDITS
     Wilson P. Snyder II
     Rudi Farkas
     Paul Covington
+    Piotr Kaluski
     ...and more...
         for code, suggestions and bug fixes.
 
