@@ -1019,6 +1019,8 @@ details).</p>
 </dt>
 <dt><strong><a name="item_paul_covington">Paul Covington</a></strong><br />
 </dt>
+<dt><strong><a name="item_piotr_kaluski">Piotr Kaluski</a></strong><br />
+</dt>
 <dt><strong><a name="item__2e_2e_2eand_more_2e_2e_2e">...and more...</a></strong><br />
 </dt>
 <dd>
